finished home page

--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "apexcharts": "^3.35.5",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "postcss": "^8.4.16",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
